--- a/DJANGOUNCHAINED/nukemapu_app/templates/index.html
+++ b/DJANGOUNCHAINED/nukemapu_app/templates/index.html
@@ -4,7 +4,7 @@
 
 <style>
   img {
-  width: 200px;
+  width: 1200px;
   height: auto;
   border-radius: 10px;
   margin-bottom: 20px;
@@ -24,11 +24,11 @@ body {
         }
 </style>
 
-<header class="masthead mb-auto">
-  <div class="inner">
-    <h3 class="masthead-brand">ÑukeMapu</h3>
-  </div>
-</header>
+{#<header class="masthead mb-auto">#}
+{#  <div class="inner">#}
+{#    <h3 class="masthead-brand">ÑukeMapu</h3>#}
+{#  </div>#}
+{#</header>#}
 <img src="{% static 'image.png' %}" alt="Django Unchained" id="django-image">
 <form method="POST" action="">
   {% csrf_token %}
